; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/hdmi/extr_dwc_hdmi.c_dwc_hdmi_set_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/hdmi/extr_dwc_hdmi.c_dwc_hdmi_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc_hdmi_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dwc_hdmi_softc*)* @dwc_hdmi_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dwc_hdmi_set_mode(%struct.dwc_hdmi_softc* %0) #0 {
  %2 = alloca %struct.dwc_hdmi_softc*, align 8
  store %struct.dwc_hdmi_softc* %0, %struct.dwc_hdmi_softc** %2, align 8
  %3 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %4 = getelementptr inbounds %struct.dwc_hdmi_softc, %struct.dwc_hdmi_softc* %3, i32 0, i32 0
  store i32 1, i32* %4, align 4
  %5 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %6 = call i32 @dwc_hdmi_disable_overflow_interrupts(%struct.dwc_hdmi_softc* %5)
  %7 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %8 = call i32 @dwc_hdmi_av_composer(%struct.dwc_hdmi_softc* %7)
  %9 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %10 = call i32 @dwc_hdmi_phy_init(%struct.dwc_hdmi_softc* %9)
  %11 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %12 = call i32 @dwc_hdmi_enable_video_path(%struct.dwc_hdmi_softc* %11)
  %13 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %14 = call i32 @dwc_hdmi_configure_audio(%struct.dwc_hdmi_softc* %13)
  %15 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %16 = call i32 @dwc_hdmi_video_packetize(%struct.dwc_hdmi_softc* %15)
  %17 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %18 = call i32 @dwc_hdmi_video_sample(%struct.dwc_hdmi_softc* %17)
  %19 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %20 = call i32 @dwc_hdmi_tx_hdcp_config(%struct.dwc_hdmi_softc* %19)
  %21 = load %struct.dwc_hdmi_softc*, %struct.dwc_hdmi_softc** %2, align 8
  %22 = call i32 @dwc_hdmi_clear_overflow(%struct.dwc_hdmi_softc* %21)
  ret i32 0
}

declare dso_local i32 @dwc_hdmi_disable_overflow_interrupts(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_av_composer(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_phy_init(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_enable_video_path(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_configure_audio(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_video_packetize(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_video_sample(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_tx_hdcp_config(%struct.dwc_hdmi_softc*) #1

declare dso_local i32 @dwc_hdmi_clear_overflow(%struct.dwc_hdmi_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
